--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sarath Kumar Portfolio</title>
+    <title> SK Sarath Kumar Portfolio</title>
     <link rel="icon" href="images/logo.png" type="image/icon type">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
