--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <image src="./images/my.png" alt=""> </image>
+                    <image src="./images/profile-3.jpg" alt=""> </image>
                 </div>
                 <div class="column right">
                     <div class="text">I'm Sarath Kumar and I'm a <span class="typing-2"></span></div>
