--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> SK Sarath Kumar Portfolio</title>
-    <link rel="icon" href="images/logo.png" type="image/icon type">
+    <title> SK Sarath Kumar</title>
+    <link rel="icon" href="images/logo.jpg" type="image/icon type">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
