--- a/index.html
+++ b/index.html
@@ -280,13 +280,13 @@
         </div->
         <div class="aron">
             <ul>
-                <li><a src="" href=""><i class="fab fa-linkedin"
+                <li><a src="" href="https://www.linkedin.com/in/sarath-kumar-3b522117a"><i class="fab fa-linkedin"
                             aria-hidden="true"></i></a></li>
-                <li><a href=""><i class="fab fa-instagram"
+                <li><a href="https://instagram.com/sri_sarath_02?igshid=ZDdkNTZiNTM="><i class="fab fa-instagram"
                             aria-hidden="true"></i></a></li>
-                <li><a href=""><i class="fab fa-facebook"
+                <li><a href="https://www.facebook.com/rockstylesarath?mibextid=ZbWKwL"><i class="fab fa-facebook"
                             aria-hidden="true"></i></a></li>
-                <li><a href="https://twitter.com/AronGilberts"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+                <li><a href=""><i class="fab fa-twitter" aria-hidden="true"></i></a>
                 </li>
                 <!-- <li><a href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a></li> -->
 
