--- a/index.html
+++ b/index.html
@@ -280,11 +280,11 @@
         </div->
         <div class="aron">
             <ul>
-                <li><a src="" href="https://www.linkedin.com/in/sarath-kumar-3b522117a"><i class="fab fa-linkedin"
+                <li><a src="" href="https://www.linkedin.com/in/sarath-kumar-3b522117a" target="_blank"><i class="fab fa-linkedin"
                             aria-hidden="true"></i></a></li>
-                <li><a href="https://instagram.com/sri_sarath_02?igshid=ZDdkNTZiNTM="><i class="fab fa-instagram"
+                <li><a href="https://instagram.com/sri_sarath_02?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fab fa-instagram"
                             aria-hidden="true"></i></a></li>
-                <li><a href="https://www.facebook.com/rockstylesarath?mibextid=ZbWKwL"><i class="fab fa-facebook"
+                <li><a href="https://www.facebook.com/rockstylesarath?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook"
                             aria-hidden="true"></i></a></li>
                 <li><a href=""><i class="fab fa-twitter" aria-hidden="true"></i></a>
                 </li>
