--- a/index.html
+++ b/index.html
@@ -64,12 +64,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Sarath Kumar and I'm a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque similique, esse eius amet
-                        earum mollitia tempore fugiat vero eligendi tempora reprehenderit voluptas alias debitis animi
-                        ipsa sit sapiente id laboriosam.\Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                        Doloremque similique, esse eius amet
-                        earum mollitia tempore fugiat vero eligendi tempora reprehenderit voluptas alias debitis animi
-                        ipsa sit sapiente id laboriosam.</p>
+                    <p>Self-motivated and hardworking fresher seeking for an opportunity to work in a challenging environment to prove my skills and utilize my knowledge & intelligence in the growth of the organization.</p>
                     <a href="sarathkumar.pdf" target="_blank"> Download CV</a>
                 </div>
             </div>
@@ -165,35 +160,35 @@
         <div class="max width">
             <h2 class="title">My Team</h2>
             <div class="carousel owl-carousel">
-                <div class="card"">
+                <div class="card">
                     <div class=" box">
                     <img src="images/profile-1.jpg" alt="">
                     <div class="text">Aron Gilberts</div>
                     <p>Software Engineer | Front End Developer</p>
                 </div>
             </div>
-            <div class="card"">
+            <div class="card">
                     <div class=" box">
                 <img src="images/profile-12.jpg" alt="">
                 <div class="text">Santhosh Kumar</div>
                 <p>Software Engineer | Front End Developer </p>
             </div>
         </div>
-        <div class="card"">
+        <div class="card">
                     <div class=" box">
             <img src="images/profile-4.jpg" alt="">
             <div class="text">Vimal Raj</div>
             <p>Software Engineer | Front End Developer | UI/UX Designer</p>
         </div>
         </div>
-        <div class="card"">
+        <div class="card">
                     <div class=" box">
             <img src="images/profile-5.jpeg" alt="">
             <div class="text">deepan Raj</div>
             <p>Software Engineer | Full-Stack Developer | Application Developer</p>
         </div>
         </div>
-        <div class="card"">
+        <div class="card">
                     <div class=" box">
             <img src="images/profile-2.jpeg" alt="">
             <div class="text">Ajith</div>
@@ -278,7 +273,7 @@
             <span>Created By <a href="#">Sarath Kumar</a> | <span class="far fa-copyrights"></span> 2022 All rights
                 reserved.</span>
         </div->
-        <div class="aron">
+        <div class="links">
             <ul>
                 <li><a src="" href="https://www.linkedin.com/in/sarath-kumar-3b522117a" target="_blank"><i class="fab fa-linkedin"
                             aria-hidden="true"></i></a></li>
