--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="column right">
                     <div class="text">I'm Sarath Kumar and I'm a <span class="typing-2"></span></div>
                     <p>Self-motivated and hardworking fresher seeking for an opportunity to work in a challenging environment to prove my skills and utilize my knowledge & intelligence in the growth of the organization.</p>
-                    <a href="sarathkumar.pdf" target="_blank"> Download CV</a>
+                    <a href="" target="_blank"> Download CV</a>
                 </div>
             </div>
         </div>
@@ -79,8 +79,7 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem ipsa voluptas commodi atque
-                            ducimus illo.</p>
+                        <p>Using React js , Html , Css ,Material Ui</p>
                     </div>
                 </div>
 
@@ -88,16 +87,14 @@
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Development</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem ipsa voluptas commodi atque
-                            ducimus illo.</p>
+                        <p></p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-mobile-alt"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem ipsa voluptas commodi atque
-                            ducimus illo.</p>
+                        <div class="text">IOT</div>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -207,8 +204,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum quibusdam nostrum culpa animi
-                        tempora praesentium odio numquam odit provident ratione?</p>
+                    <p><p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
