--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                     </div>
                 </div>
                 <div class="column right">
+                    <fieldset>
                     <div class="text">Message me</div>
                     <form action="#" class="form-contact">
                         <div class="fields">
@@ -257,6 +258,7 @@
                         <div class="button" id="submit">
                             <button id="submit" type="submit">Send message</button>
                         </div>
+                    </fieldset>
                     </form>
                 </div>
             </div>
