--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <image src="./images/my.png" alt="avatar" style="border-radius: 70%;"> </image>
+                    <image src="./images/BACK.jpg" alt="avatar" style="border-radius: 50%;background-color: azure;"> </image>
                 </div>
                 <div class="column right">
                     <div class="text">I'm Sarath Kumar and I'm a <span class="typing-2"></span></div>
@@ -79,14 +79,14 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Design</div>
-                        <p>Using React js , Html , Css ,Material Ui</p>
-                    </div>
+<!--                         <p>Using React js , Html , Css ,Material Ui</p>
+ -->                    </div>
                 </div>
 
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
-                        <div class="text">Development</div>
+                        <div class="text">Database</div>
                         <p></p>
                     </div>
                 </div>
@@ -107,9 +107,13 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & expriences</div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, rerum cupiditate, sed
-                        consectetur quos molestiae quam non nostrum voluptatibus eveniet quis? Asperiores at
-                        necessitatibus velit cumque deserunt autem possimus quo.</p>
+                    <p>To obtain a challenging role as a Full Stack Developer where I can utilize my skills and knowledge to 
+                        design and develop high-quality, efficient and scalable web applications. 
+                        I aim to contribute my expertise in front-end development, back-end development, 
+                        database design, and cloud deployment to create innovative and 
+                        user-friendly products that meet the needs of clients and end-users. 
+                        I am passionate about constantly learning and adopting new technologies and tools, 
+                        and am committed to delivering exceptional results while working collaboratively in a team environment.</p>
                     <a href="#">read more</a>
                 </div>
                 <div class="column right">
@@ -123,14 +127,14 @@
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>60%</span>
+                            <span>70%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>60%</span>
+                            <span>80%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
@@ -144,7 +148,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>python</span>
-                            <span>40%</span>
+                            <span>50%</span>
                         </div>
                         <div class="line python"></div>
                     </div>
@@ -159,21 +163,21 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class=" box">
-                    <img src="images/profile-1.jpg" alt="">
+                    <img src="" alt="">
                     <div class="text">Aron Gilberts</div>
                     <p>Software Engineer | Front End Developer</p>
                 </div>
             </div>
             <div class="card">
                     <div class=" box">
-                <img src="images/profile-12.jpg" alt="">
+                <img src="" alt="">
                 <div class="text">Santhosh Kumar</div>
                 <p>Software Engineer | Front End Developer </p>
             </div>
         </div>
         <div class="card">
                     <div class=" box">
-            <img src="images/profile-4.jpg" alt="">
+            <img src="" alt="">
             <div class="text">Vimal Raj</div>
             <p>Software Engineer | Front End Developer | UI/UX Designer</p>
         </div>
@@ -230,7 +234,7 @@
                     </div>
                 </div>
                 <div class="column right">
-                    <fieldset>
+                    
                     <div class="text">Message me</div>
                     <form action="#" class="form-contact">
                         <div class="fields">
@@ -258,7 +262,6 @@
                         <div class="button" id="submit">
                             <button id="submit" type="submit">Send message</button>
                         </div>
-                    </fieldset>
                     </form>
                 </div>
             </div>
