--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </div>
         <div class="card">
                     <div class=" box">
-            <img src="images/profile-5.jpeg" alt="">
+            <img src="" alt="">
             <div class="text">deepan Raj</div>
             <p>Software Engineer | Full-Stack Developer | Application Developer</p>
         </div>
