--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
     </section>
     <!-- teams section start -->
-    <section class="teams" id="teams">
+   <!--  <section class="teams" id="teams">
         <div class="max width">
             <h2 class="title">My Team</h2>
             <div class="carousel owl-carousel">
@@ -199,7 +199,7 @@
         </div>
         </div>
     </section>
-
+ -->
     <!-- contact section start -->
 
     <section class="contact" id="contact">
